--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -48,6 +48,18 @@
         <div class="filter">
             <form method="get" class="filter-container">
                 <div class="filter-section">
+                    <label>Марка</label>
+                    <select class="filter-select" name="model">
+                        <option value="">Все марки</option>
+                        {% for car in cars %}
+                            <option value="{{ car.brand }}" {% if request.GET.model == car.brand %}selected{% endif %}>
+                                {{ car.brand }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                 <div class="filter-section">
                     <label>Модель</label>
                     <select class="filter-select" name="model">
                         <option value="">Все модели</option>
@@ -60,32 +72,8 @@
                 </div>
 
                 <div class="filter-section">
-                    <label>Местоположение</label>
-                    <select class="filter-select" name="location">
-                        <option value="">Все регионы</option>
-                        <option value="Ош" {% if request.GET.location == 'Ош' %}selected{% endif %}>Ош</option>
-                        <option value="Бишкек" {% if request.GET.location == 'Бишкек' %}selected{% endif %}>Бишкек</option>
-                        <option value="Джалал-Абад" {% if request.GET.location == 'Джалал-Абад' %}selected{% endif %}>Джалал-Абад</option>
-                    </select>
-                </div>
-
-                <div class="filter-section">
-                    <label>Страна учета</label>
-                    <select class="filter-select" name="country">
-                        <option value="">Все страны</option>
-                        <option value="Кыргызстан" {% if request.GET.country == 'Кыргызстан' %}selected{% endif %}>Кыргызстан</option>
-                        <option value="Япония" {% if request.GET.country == 'Япония' %}selected{% endif %}>Япония</option>
-                        <option value="Германия" {% if request.GET.country == 'Германия' %}selected{% endif %}>Германия</option>
-                    </select>
-                </div>
-
-                <div class="filter-section">
                     <div class="price-currency">
                         <span>Цена</span>
-                        <div class="currency-switcher">
-                            <button type="button" class="currency">KGS</button>
-                            <button type="button" class="currency">USD</button>
-                        </div>
                     </div>
                     <div class="range-inputs">
                         <input type="number" name="min_price" placeholder="Цена от" value="{{ request.GET.min_price }}">
