--- a/templates/custom_admin/login.html
+++ b/templates/custom_admin/login.html
@@ -33,6 +33,7 @@
     </form>
 
     <p>Нет аккаунта? <a href="{% url 'register' %}">Регистрация</a></p>
+    <a href="{% url 'logout' %}">Выход</a>
 </div>
 
 </body>
